[tool.poetry]
name = "scrawl"
version = "1.0.0"
description = ""
authors = ["Sergio Ortiz Rojas <sergio@prompsit.com>"]

[tool.poetry.dependencies]
python = "^3.10"
setuptools = "^75.5.0"
docopt = "^0.6.2"
schema = "^0.7.5"
beautifulsoup4 = "^4.12.2"
Unidecode = "^1.3.6"
regex = "^2023.8.8"
xxhash = "^3.3.0"
playwright = "^1.38.0"
iso_639 = {git = "https://github.com/noumar/iso639.git", tag = "0.4.5"}
Babel = "^2.12.1"
zstandard = "^0.21.0"
numpy = "^1.24.2"
tld="^0.13"
lxml="^5.3.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.scripts]
scrawl = "scrawl.main:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
